Add Postgres-backed integration tests with Testcontainers
- Created `InteractionLogRepositoryPostgresIT` for PostgreSQL integration testing using Testcontainers.
- Added Spring profile `postgres-it` with corresponding configuration file.
- Updated `TestcontainersConfiguration` for PostgreSQL container setup.
- Refactored and cleaned up H2 test imports.
- Fixed minor issues in `DataUtilTest` and other test classes.